[package]
name = "straight_chain_of_blocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
chrono = "0.4.31"
env_logger = "0.10.1"
log = "0.4.20"
uuid = {version = "1.5.0", features = ["v4", "fast-rng"]}
